# hixs_newlib

./: .gitignore  PORTING.md  README.md
newlib/: config.sub  configure  configure.ac
newlib/autom4te.cache/: output.0  requests  traces.0  traces.0t
newlib/newlib/: ChangeLog.orig  Makefile.in  aclocal.m4  configure  configure.host
newlib/newlib/autom4te.cache/: output.0  requests  traces.0  traces.1
newlib/newlib/doc/: aclocal.m4  configure
newlib/newlib/doc/autom4te.cache/: output.1  requests  traces.0  traces.1
newlib/newlib/iconvdata/: Makefile.in  configure
newlib/newlib/iconvdata/autom4te.cache/: output.0  traces.0  traces.1
newlib/newlib/libc/: Makefile.in  configure
newlib/newlib/libc/argz/: Makefile.in
newlib/newlib/libc/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
newlib/newlib/libc/ctype/: Makefile.in
newlib/newlib/libc/errno/: Makefile.in
newlib/newlib/libc/iconv/: Makefile.in
newlib/newlib/libc/locale/: Makefile.in
newlib/newlib/libc/machine/: Makefile.in  configure
newlib/newlib/libc/misc/: Makefile.in
newlib/newlib/libc/sys/hixs/: Makefile.am  Makefile.in  README  configure  configure.ac  configure.in  crt0.c  hixsys.c  syscallstubs.c
newlib/newlib/libc/sys/hixs/autom4te.cache/: output.0  output.1  requests  traces.1  traces.2
newlib/newlib/libc/sys/hixs/bad/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
newlib/newlib/libc/sys/hixs/bad2/: Makefile.am  configure.in
newlib/newlib/libc/sys/hixs/bad3/: configure.in
newlib/newlib/libm/: Makefile.in  aclocal.m4  configure
(+174 files in other folders)
