dnl This is the newlib/libc/sys/hixs configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_MSG_NOTICE([===== Running configure for HIXS <$PACKAGE_NAME> version <$PACKAGE_VERSION> ====])
AC_CONFIG_SRCDIR([syscallstubs.c])

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../../..)

AM_INIT_AUTOMAKE
NEWLIB_CONFIGURE(../../..)

AC_OUTPUT(Makefile)
